noticket: Update to Java 25-ready versions of dependencies and Maven plugins
**Compile Dependencies Updated:**
- Prometheus Simpleclient: 0.**6**.0 -> 0.**16**.0
- Guava 33.**0**.0-jre -> 33.**5**.0.jre

**Optional Compile Dependencies:**
- Kotlin: **1.9.0** -> **2.2.21**

**Build-Time Dependencies Updated:**
- Lombok: 1.18.**30** -> 1.18.**42**
- Maven Compiler Plugin: 3.**11.0** -> 3.**14.1**
- Maven Enforcer Plugin: 3.**3.0** -> 3.**6.2**
- Extra Maven Enforcer Plugin rules: 1.**7**.0 -> 1.**11**.0
- Maven JaCoCo plugin: 0.8.**11** -> 0.8.**14**

**Test Dependencies Updated:**
- Mockito: 5.**11**.0 -> 5.**20**.0
- ByteBuddy: 1.**14.11** -> 1.**17.7** (same as in Mockito dependencies)
- AspectJ Weaver: 1.9.**21** -> 1.9.**24**
- Kotlin Compile Testing (for testing Annotation Processor):
  Switched to a fork (`dev.zacsweers.kctfork:core`) that supports Kotlin 2.2.x

**Test Dependencies Removed:**
- Hamcrest: Was unused, because we now use AssertJ everywhere